--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,8 +4,26 @@ on:
   push:
     branches:
     - main 
+    
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    env:
+      MDBOOK_VERSION: 0.4.36
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install mdBook
+        run: |
+          curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf -y | sh
+          rustup update
+          cargo install --version ${MDBOOK_VERSION} mdbook
+      - name: Build with mdBook
+        run: mdbook build
   deploy:
     runs-on: ubuntu-latest
     steps:
