--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,6 +24,12 @@ jobs:
           cargo install --version ${MDBOOK_VERSION} mdbook
       - name: Build with mdBook
         run: mdbook build
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v4
+        if: github.ref == 'refs/heads/main'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./book
   deploy:
     needs: build
     runs-on: ubuntu-latest
